"Adding some items to demonstrate how it works"

--- a/shoppinList.html
+++ b/shoppinList.html
@@ -13,7 +13,10 @@
         <input id="userinput" type="text" placeholder="Enter item">
         <button id="enter">Enter</button>
         <ul id="list">
-            
+            <li class="done"><button class="remove-item">X</button>Notebook</li>
+            <li><button class="remove-item">X</button>Pencil</li>
+            <li><button class="remove-item">X</button>Pen</li>
+            <li><button class="remove-item">X</button>Pizza</li>
         </ul>
     </div>
     <script type="text/javascript" src="script.js"></script>
